# ai-algorithms-models

./: .gitignore
ai_algorithms/: maze_problem_using_bfs.py  maze_problem_using_bfs_1.py  maze_problem_using_dfs.py  maze_problem_using_dfs_1.py
ai_algorithms/libs/: pyamaze.py  utils.py
machine_learning/: CMakeLists.txt  dependencies_list.txt
machine_learning/common_utils/: CMakeLists.txt
machine_learning/common_utils/include/common_utils/: for_plot.hpp
machine_learning/common_utils/src/: for_plot.cpp
machine_learning/py_files/: linear_regression.py  percepton_algorithm.py  quadratic_regression.py
machine_learning/py_files/libs/: utils.py
machine_learning/py_files/perceptrons/: continuous_perceptron_algorithm.py  discrete_perceptron_algorithm.py  perceptron_algorithm.py  sentiment_analysis.py
machine_learning/py_files/polynomial_regression/: linear_regression.py  quadratic_regression.py
machine_learning/py_files/real_life_example/: main.py
machine_learning/regression/: CMakeLists.txt
machine_learning/regression/include/regression/: utils_for_regression.hpp
machine_learning/regression/src/: utils_for_regression.cpp
machine_learning/testing/: CMakeLists.txt  info.txt
machine_learning/testing/matplot_testing/: test.cpp  test1.cpp
machine_learning/testing/regression_testing/: linear_regression.cpp  quadratic_regression.cpp
